change logic of course and tuition